# projection-pursuit

./: .buildinfo  .editorconfig  .gitignore  .travis.yml  CITATION.md  LICENSE  MATH.md  README.md  circle.yml  genindex.html  index.html  math.aux  math.out  math.tex  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  skpp.html
.doctrees/: environment.pickle  index.doctree  skpp.doctree
.github/: FUNDING.yml
.github/workflows/: build.yml  github-actions.yml  release.yml
_modules/: index.html  skpp.html
_modules/sklearn/utils/: _metadata_requests.html
_sources/: index.rst.txt  skpp.rst.txt
_static/: alabaster.css
benchmarks/: classifier_benchmark.ipynb  compare_classifier.py  compare_to_neural_network.ipynb  compare_to_neural_network.py
doc/: Makefile  conf.py  index.rst  math.tex  modules.rst  skpp.rst  skpp.tests.rst
examples/: README.txt  maths_in_book.ipynb  plot_classifier.py  plot_classifier_notebook.ipynb  plot_regressor.py  plot_regressor_notebook.ipynb  plot_transformer.py  plot_transformer_notebook.ipynb  viz_training_process.py
projection_pursuit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
skpp/: __init__.py  skpp.py  test_ppr.py
skpp/tests/: test_skpp.py
